--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,8 @@
       <a class="{% if page.url == '/papers.html' %}active{% endif %}"
          href="{{ '/papers.html' | relative_url }}">Papers</a>
 
-      <a class="{% if page.url == '/other_writings.html' %}active{% endif %}"
-         href="{{ '/other_writings.html' | relative_url }}">Other Writings</a>
+      <a class="{% if page.url == '/other.html' %}active{% endif %}"
+         href="{{ '/other.html' | relative_url }}">Other</a>
     </nav>
   </header>
 
